--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@
 
 
 Youssef Abouyahia <youssef.abouyahia@e-polytechnique.ma>
-abdallah abdeen <abdallah.zakaria2021@gmail.com>
+Abdallah Abdeen <abdallah.zakaria2021@gmail.com>
